wled00/data/index.css
/* ... */
.close {
	position: -webkit-sticky;
	position: sticky;
	top: 0;
	float: right;
}

#info, #nodes {
	z-index: 4;
}

#rover {
	z-index: 3;
}

#rover .ibtn {
	margin: 5px;
}

#ndlt {
	margin: 12px 0;
}

#roverstar {
	position: fixed;
	top: calc(var(--th) + 5px);
	left: 1px;
	cursor: pointer;
}

#connind {
	position: fixed;
	bottom: calc(var(--bh) + 5px);
	left: 4px;
	padding: 5px;
	border-radius: 5px;
	background-color: #a90;
	z-index: -2;
}

#info .slider {
	max-width: 200px;
	min-width: 145px;
	float: right;
	margin: 0;
}
#info .sliderwrap {
	width: 200px;
}

#info table, #nodes table {
	table-layout: fixed;
	width: 100%;
}

#info td, #nodes td {
  padding-bottom: 8px;
}

#info .ibtn {
	margin: 5px;
}

#info div, #nodes div {
	max-width: 490px;
	margin: 0 auto;
}

#info #imgw {
	margin: 8px auto;
}

#lv {
	max-width: 600px;
	display: inline-block;
}

#heart {
	transition: color .9s;
	font-size: 16px;
	color: #f00;
}

img {
	max-width: 100%;
	max-height: 100%;
}

.wi {
	image-rendering: pixelated;
	image-rendering: crisp-edges;
	width: 210px;
}

@keyframes fadein {
	from {bottom: 0; opacity: 0;}
	to {bottom: calc(var(--bh) + 22px); opacity: 1;}
}

.sliderdisplay {
	content:'';
	position: absolute;
	top: 12px; left: 8px; right: 8px;
	height: 5px;
	background: var(--c-4);
	border-radius: 16px;
	pointer-events: none;
	z-index: -1;
	--bg: var(--c-f);
}

#rwrap .sliderdisplay { --bg: none; background: linear-gradient(90deg, #000 -15%, #f00); } /* -15% since #000 is too dark */
#gwrap .sliderdisplay { --bg: none; background: linear-gradient(90deg, #000 -15%, #0f0); } /* -15% since #000 is too dark */
#bwrap .sliderdisplay { --bg: none; background: linear-gradient(90deg, #000 -15%, #00f); } /* -15% since #000 is too dark */
#wwrap .sliderdisplay { --bg: none; background: linear-gradient(90deg, #000 -15%, #fff); } /* -15% since #000 is too dark */
#kwrap .sliderdisplay,
#wbal  .sliderdisplay { background: linear-gradient(90deg, #ff8f1f 0%, #fff 50%, #cbdbff); }

/* wrapper divs hidden by default */
#liveview, #liveview2D, #roverstar, #pql
#rgbwrap, #swrap, #hwrap, #kwrap, #wwrap, #wbal, #qcs-w, #hexw,
.clear-icon, .edit-icon, .ptxt {
	display: none;
}

.sliderbubble {
	width: 24px;
	position: absolute;
	display: inline-block;
	border-radius: 16px;
	background: var(--c-3);
	color: var(--c-f);
	padding: 4px;
	font-size: 14px;
	right: 6px;
	transition: visibility .25s ease,opacity .25s ease;
	opacity: 0;
	visibility: hidden;
	/* left: 8px; */
	top: 4px;
}

output.sliderbubbleshow {
	visibility: visible;
	opacity: 1;
}

input[type=range] {
	-webkit-appearance: none;
	width: 100%;
	padding: 0;
	margin: 0;
	background-color: transparent;
	cursor: pointer;
}

input[type=range]:focus {
	outline: 0;
}
input[type=range]::-webkit-slider-runnable-track {
	width: 100%;
	height: 30px;
	cursor: pointer;
	background: transparent;
}
input[type=range]::-webkit-slider-thumb {
	height: 16px;
	width: 16px;
	border-radius: 50%;
	background: var(--c-f);
	cursor: pointer;
	-webkit-appearance: none;
	margin-top: 7px;
}
input[type=range]::-moz-range-track {
	width: 100%;
	height: 30px;
	background-color: rgba(0, 0, 0, 0);
}
input[type=range]::-moz-range-thumb {
	border: 0 solid rgba(0, 0, 0, 0);
	height: 16px;
	width: 16px;
	border-radius: 50%;
	background: var(--c-f);
	transform: translateY(5px);
}
#Colors input[type=range]::-webkit-slider-thumb {
	height: 18px;
	width: 18px;
	border: 2px solid var(--c-1);
	margin-top: 5px;
}
#Colors input[type=range]::-moz-range-thumb {
	border: 2px solid var(--c-1);
}

#Colors .sliderwrap {
	margin: 2px 0 0;
}

/* Dynamically hide labels */
.hd {
	display: var(--bhd);
}
/* Do not hide quick load label in simplified mode on small screen widths */
.simplified #pql .hd {
	display: var(--bhd) !important;
}

#briwrap {
	min-width: 161px;
	float: right;
	margin-top: -6px;
	padding-right: 8px;
}

#briwrap .sliderwrap {
	width: 161px;
	max-width: 161px;
}

#picker {
	margin: 4px auto 20px !important;
	max-width: max-content;
}

/* buttons */
.btn {
	padding: 8px;
	margin: 10px 4px;
	width: 230px;
	font-size: 19px;
	color: var(--c-d);
	cursor: pointer;
	border-radius: 25px;
	transition-duration: .3s;
	-webkit-backface-visibility: hidden;
	-webkit-transform: translate3d(0,0,0);
	backface-visibility: hidden;
	transform: translate3d(0,0,0);
	overflow: hidden;
	text-overflow: ellipsis;
	border: 1px solid var(--c-3);
	background-color: var(--c-3);
}
#segutil .btn-s:hover,
#segutil2 .btn-s:hover,
#putil .btn-s:hover,
.btn:hover {
	border: 1px solid var(--c-5) /*!important*/;
	background-color: var(--c-5) /*!important*/;
}
.btn-s {
	width: 100%;
	margin: 0;
}
.btn-icon {
	margin: -4px 4px -1px 0;
	vertical-align: middle;
	display: inline-block;
}
.btn-n {
	width: 230px;
	margin: 0 8px 0 0;
}
.btn-p {
	width: 120px;
	margin: 5px 0;
}
.btn-xs, .btn-pl-del, .btn-pl-add {
	width: 42px !important;
	height: 42px !important;
	text-overflow: clip;
}
.btn-xs {
	margin: 0;
}
#info .btn-xs {
	border: 1px solid var(--c-4);
}
#btns .btn-xs {
	margin: 0 4px;
}

#putil .btn-s {
	width: 135px;
}

#nodes .ibtn {
	margin: 0;
}

#segutil .btn-s, #segutil2 .btn-s, #putil .btn-s {
	background-color: var(--c-3);
	border: 1px solid var(--c-3);
}

.btn-pl-del, .btn-pl-add {
	margin: 0;
	white-space: nowrap;
}
a.btn {
	display: block;
	white-space: nowrap;
	text-align: center;
	padding: 9px 32px 7px 24px;
	position: relative;
	box-sizing: border-box;
	line-height: 24px;
}

/* Quick color select wrapper div */
#qcs-w {
	display: none;
	margin-top: 10px;
}

/* Quick color select buttons */
.qcs {
	margin: 0 2px;
	border-radius: 14px;
	display: inline-block;
	width: 28px;
	height: 28px;
	line-height: 28px;
}

/* Quick color select Black and White button (has white/black border, depending on the theme) */
.qcsb, .qcsw {
	width: 26px;
	height: 26px;
	line-height: 26px;
	border: 1px solid var(--c-f);
}

/* Hex color input wrapper div */
#hexw {
	margin-top: 5px;
}
/* ... */

